# buenos-aires-half-marathon-age-group-analytics

./: .gitignore  AGENT.md  CNAME  README.md  data_discovery.ipynb  pyproject.toml  render.yaml
.github/: bruin.yaml
.github/workflows/: deploy.yml
half-marathon-bruin/pipeline/: pipeline.yml
half-marathon-bruin/pipeline/assets/ingestion/: half_marathon_to_bq.sql  half_marathon_to_gcs.py  half_marathon_utils.py  requirements.txt
half-marathon-bruin/pipeline/assets/setup/: ensure_staging_dataset.py
half-marathon-bruin/pipeline/assets/staging/: half_marathon.asset.yml  half_marathon.sql
half-marathon-marimo/: buenos_aires_half_marathon_dashboard.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
