[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.2.0",
    "google-cloud-bigquery>=3.17.0",
    "google-cloud-bigquery-storage>=2.36.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kagglehub[pandas-datasets]>=1.0.0",
    "marimo>=0.21.1",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
]
